enhanced all the pages
I added more content on the pages as per feedback and enhanced then by using css external and internal on all pages.

--- a/about.html
+++ b/about.html
@@ -139,6 +139,28 @@
       font-size: 1rem;
       color: goldenrod;
     }
+    /* Founder Image */
+.founder-image {
+  display: block;
+  margin: 20px auto;
+  max-width: 220px;
+  border-radius: 50%; /* circular image */
+  box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+}
+
+/* Founder Summary Paragraph */
+.founder-summary {
+  font-family: 'Georgia', 'Times New Roman', serif; /* elegant font */
+  font-size: 1.1rem;
+  line-height: 1.7;
+  color: #333;
+  max-width: 800px;
+  margin: 20px auto;
+  padding-bottom: 12px;
+  border-bottom: 3px solid #d4af37; /* golden underline */
+  text-align: center;
+}
+
 </style>
     </head>
 
@@ -205,12 +227,13 @@
 
   <div class="founder-wrapper">
   <img src="images/founder.jpg" alt="Founder Image" class="founder-image">
-  <p class="founder-summary">
-  <strong>Melissa Yvonne Skhosule </strong> founded EmilyRewritten.org on January 31, 2020, in South Africa, as a youth-centered 
-  organisation empowering young people to reclaim their stories. With over 4,000
-   youth impacted across Africa through socail media platforms, virtual events and mentorship sessions, it creates safe spaces for growth, and leadership through 
-   career advice, intensive support and creative expression. The organisation offers storytelling workshops, 
-   , advocacy campaigns, and youth-led initiatives that help young people stand strong and lead with purpose.
+
+<p class="founder-summary">
+  <strong>Melissa Yvonne Skhosule</strong> founded <em>EmilyRewritten.org</em> on January 31, 2020, in South Africa, as a youth-centered 
+  organisation empowering young people to reclaim their stories. With over <strong>4,000 youth impacted</strong> across Africa 
+  through social media platforms, virtual events, and mentorship sessions, it creates safe spaces for growth and leadership 
+  through career advice, intensive support, and creative expression. The organisation offers storytelling workshops, 
+  advocacy campaigns, and youth-led initiatives that help young people stand strong and lead with purpose.
 </p>
 
 
