--- a/about.html
+++ b/about.html
@@ -160,6 +160,41 @@
   border-bottom: 3px solid #d4af37; /* golden underline */
   text-align: center;
 }
+/* Desktop default */
+.menu-icon {
+  display: none;
+  font-size: 30px;
+  cursor: pointer;
+  padding: 10px;
+}
+
+/* Mobile Navigation */
+@media (max-width: 768px) {
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    text-align: center;
+    background: white;
+    width: 100%;
+    padding: 20px 0;
+    position: absolute;
+    top: 80px;
+    left: 0;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  }
+
+  .nav-links.open {
+    display: flex;
+  }
+
+  .menu-icon {
+    display: block;
+  }
+
+  .navbar {
+    position: relative;
+  }
+}
 
 </style>
     </head>
@@ -303,5 +338,75 @@
       updateCounter();
     });
   </script>
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+    console.log("JavaScript loaded successfully on About Us page.");
+
+    /* ------------------------------------------------
+       1. Animated Impact Counters (Your original code)
+    --------------------------------------------------- */
+    const counters = document.querySelectorAll('.counter');
+    counters.forEach(counter => {
+        counter.innerText = '0';
+
+        const updateCounter = () => {
+            const target = +counter.getAttribute('data-target');
+            const current = +counter.innerText;
+            const increment = target / 100;
+
+            if (current < target) {
+                counter.innerText = `${Math.ceil(current + increment)}`;
+                setTimeout(updateCounter, 30);
+            } else {
+                counter.innerText = target;
+            }
+        };
+
+        updateCounter();
+    });
+
+    /* ------------------------------------------------
+       2. Card Hover Boost (Safer JS version)
+    --------------------------------------------------- */
+    const cards = document.querySelectorAll(".card");
+    cards.forEach(card => {
+        card.addEventListener("mouseenter", () => {
+            card.style.transform = "scale(1.03)";
+            card.style.boxShadow = "0 12px 25px rgba(0,0,0,0.2)";
+            card.style.transition = "all 0.3s ease";
+        });
+
+        card.addEventListener("mouseleave", () => {
+            card.style.transform = "scale(1)";
+            card.style.boxShadow = "0 6px 15px rgba(0,0,0,0.1)";
+        });
+    });
+
+    /* ------------------------------------------------
+       3. Optional Smooth Scroll (if needed)
+    --------------------------------------------------- */
+    const scrollButtons = document.querySelectorAll(".scroll-btn");
+    scrollButtons.forEach(btn => {
+        btn.addEventListener("click", () => {
+            window.scrollTo({
+                top: document.body.scrollHeight,
+                behavior: "smooth"
+            });
+        });
+    });
+
+    /* ------------------------------------------------
+       4. Mobile Navigation Toggle (for later)
+    --------------------------------------------------- */
+    const navLinks = document.getElementById("navLinks");
+    const menuIcon = document.querySelector(".menu-icon"); // Add later if needed
+
+    if (menuIcon) {
+        menuIcon.addEventListener("click", () => {
+            navLinks.classList.toggle("open");
+        });
+    }
+});
+</script>
         </body>
 </html>
